fix: styles nav bar items jumped, need fix

--- a/sass/blocks/_form.sass
+++ b/sass/blocks/_form.sass
@@ -16,7 +16,7 @@
   &__name
     width: 460px
     height: 70px
-    padding: 10px 10px 10px 32px
+    padding: 10px 32px
     border-radius: 40px
     background: $black
     border: none
@@ -26,10 +26,11 @@
     line-height: normal
     color: white
     margin-bottom: 16px
+    overflow: hidden
   &__email
     width: 460px
     height: 70px
-    padding: 10px 10px 10px 32px
+    padding: 10px 32px
     border-radius: 40px
     background: $black
     border: none
@@ -39,6 +40,7 @@
     line-height: normal
     color: white
     margin-bottom: 16px
+    overflow: hidden
   &__button
     width: 296px
     height: 70px
