--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -16,6 +16,7 @@
   justify-content: space-between
   margin-right: 630px
   &__author
+    padding: 4px 10px
     text-decoration: none
     font-weight: 700
     font-size: 20px
@@ -24,6 +25,7 @@
     &:hover
       border: 2px solid #57D272
   &__collections
+    padding: 4px 10px
     text-decoration: none
     font-weight: 700
     font-size: 20px
@@ -32,6 +34,7 @@
     &:hover
       border: 2px solid #57D272
   &__services
+    padding: 4px 10px
     text-decoration: none
     font-weight: 700
     font-size: 20px
